airflow/logs/dag_id=btcusdt_data_ingestion/run_id=manual__2024-10-15T22:34:35.125564+00:00/task_id=ingest_btcusdt/% if ti.map_index >= 0 %map_index=-1/% endif %attempt=1.log
[2024-10-15T22:34:41.225+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:34:41.245+0000] {__init__.py:51} DEBUG - Loading core task runner: StandardTaskRunner
[2024-10-15T22:34:41.268+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:34:41.273+0000] {base_task_runner.py:68} DEBUG - Planning to run as the  user
[2024-10-15T22:34:41.277+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]> from DB
[2024-10-15T22:34:41.304+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]> dependency 'Previous Dagrun State' PASSED: True, The task did not have depends_on_past set.
[2024-10-15T22:34:41.316+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]> dependency 'Task Instance Not Running' PASSED: True, Task is not in running state.
[2024-10-15T22:34:41.316+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]> dependency 'Task Instance State' PASSED: True, Task state queued was valid.
[2024-10-15T22:34:41.317+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]> dependency 'Not In Retry Period' PASSED: True, The task instance was not marked for retrying.
[2024-10-15T22:34:41.317+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]>
[2024-10-15T22:34:41.318+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]> dependency 'Previous Dagrun State' PASSED: True, The task did not have depends_on_past set.
[2024-10-15T22:34:41.324+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]> dependency 'Task Concurrency' PASSED: True, Task concurrency is not set.
[2024-10-15T22:34:41.330+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]> dependency 'Pool Slots Available' PASSED: True, There are enough open slots in default_pool to execute the task
[2024-10-15T22:34:41.331+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]> dependency 'Not In Retry Period' PASSED: True, The task instance was not marked for retrying.
[2024-10-15T22:34:41.331+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [queued]>
[2024-10-15T22:34:41.332+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 2
[2024-10-15T22:34:41.349+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): ingest_btcusdt> on 2024-10-15 22:34:35.125564+00:00
[2024-10-15T22:34:41.354+0000] {standard_task_runner.py:57} INFO - Started process 52 to run task
[2024-10-15T22:34:41.359+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'btcusdt_data_ingestion', 'ingest_btcusdt', 'manual__2024-10-15T22:34:35.125564+00:00', '--job-id', '11', '--raw', '--subdir', 'DAGS_FOLDER/ingest_btcusdt_data.py', '--cfg-path', '/tmp/tmpifnuhqdt']
[2024-10-15T22:34:41.362+0000] {standard_task_runner.py:85} INFO - Job 11: Subtask ingest_btcusdt
[2024-10-15T22:34:41.363+0000] {cli_action_loggers.py:65} DEBUG - Calling callbacks: [<function default_action_log at 0x7f7b0c199c10>]
[2024-10-15T22:34:41.443+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:34:41.448+0000] {task_command.py:410} INFO - Running <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [running]> on host d867809303f2
[2024-10-15T22:34:41.449+0000] {settings.py:353} DEBUG - Disposing DB connection pool (PID 52)
[2024-10-15T22:34:41.449+0000] {settings.py:212} DEBUG - Setting up DB connection pool (PID 52)
[2024-10-15T22:34:41.450+0000] {settings.py:285} DEBUG - settings.prepare_engine_args(): Using NullPool
[2024-10-15T22:34:41.452+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [running]> from DB
[2024-10-15T22:34:41.513+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:34:41.517+0000] {taskinstance.py:868} DEBUG - Clearing XCom data
[2024-10-15T22:34:41.565+0000] {retries.py:80} DEBUG - Running RenderedTaskInstanceFields._do_delete_old_records with retries. Try 1 of 3
[2024-10-15T22:34:41.589+0000] {taskinstance.py:1545} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='btcusdt_data_ingestion' AIRFLOW_CTX_TASK_ID='ingest_btcusdt' AIRFLOW_CTX_EXECUTION_DATE='2024-10-15T22:34:35.125564+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-15T22:34:35.125564+00:00'
[2024-10-15T22:34:41.590+0000] {__init__.py:117} DEBUG - Preparing lineage inlets and outlets
[2024-10-15T22:34:41.591+0000] {__init__.py:155} DEBUG - inlets: [], outlets: []
[2024-10-15T22:34:41.603+0000] {base.py:73} INFO - Using connection ID 'company_dw' for task execution.
[2024-10-15T22:34:41.654+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/ingest_btcusdt_data.py", line 56, in ingest_csv_to_postgres
    cursor.execute(create_table_query)
psycopg2.errors.SyntaxError: syntax error at or near "TEXT"
LINE 3:         Open Time TEXT, Open TEXT, High TEXT, Low TEXT, Clos...
                          ^

[2024-10-15T22:34:41.657+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:34:35.125564+00:00 [running]> from DB
[2024-10-15T22:34:41.673+0000] {taskinstance.py:2305} DEBUG - Task Duration set to 0.355607
[2024-10-15T22:34:41.675+0000] {taskinstance.py:1356} DEBUG - Clearing next_method and next_kwargs.
[2024-10-15T22:34:41.675+0000] {taskinstance.py:1345} INFO - Marking task as UP_FOR_RETRY. dag_id=btcusdt_data_ingestion, task_id=ingest_btcusdt, execution_date=20241015T223435, start_date=20241015T223441, end_date=20241015T223441
[2024-10-15T22:34:41.695+0000] {cli_action_loggers.py:83} DEBUG - Calling callbacks: []
[2024-10-15T22:34:41.695+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 11 for task ingest_btcusdt (syntax error at or near "TEXT"
LINE 3:         Open Time TEXT, Open TEXT, High TEXT, Low TEXT, Clos...
                          ^
; 52)
[2024-10-15T22:34:41.703+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2024-10-15T22:34:41.731+0000] {dagrun.py:697} DEBUG - number of tis tasks for <DagRun btcusdt_data_ingestion @ 2024-10-15 22:34:35.125564+00:00: manual__2024-10-15T22:34:35.125564+00:00, state:running, queued_at: 2024-10-15 22:34:35.144157+00:00. externally triggered: True>: 0 task(s)
[2024-10-15T22:34:41.731+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
